--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% include 'head.html' %}
 <body>
-    <h1>hello_world</h1>
+{% include 'header.html' %}
+
+{% block content %}
+
+{% endblock %}
+
+{% include 'footer.html' %}
 </body>
 </html>
