--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,10 @@
-<div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem">
+<div style="text-align: center; font-family: 'Outfit', sans-serif;">
+    <div style="margin: 2rem 0;">
+        <h1>Blog</h1>
+    </div>
+    <span>nav1</span>
+    <span>nav2</span>
+    <span>nav3</span>
+    <span>nav4</span>
 
 </div>
