--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
-<div style="text-align: center; font-family: 'Outfit', sans-serif;">
-    <div style="font-size: .6rem;">
+<div style="text-align: center;">
+    <div class="woohaen_footer_button">
         <span>공지사항</span> |
         <span>제휴문의</span> |
         <span>서비스소개</span>
     </div>
     <div style="margin-top: 1rem;">
-        <h6 style="margin-top: 1rem;">
+        <h6 class="woohaen_footer_logo" style="margin-top: 1rem;">
             Woohyeon
         </h6>
     </div>
