--- a/templates/head.html
+++ b/templates/head.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,5 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100&display=swap" rel="stylesheet">
+
+    <!-- DEFAULT CSS -->
+    <link rel="stylesheet" href="{% static 'base.css' %}">
     <title>Document</title>
 </head>
