--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<div style="text-align: center; font-family: 'Outfit', sans-serif;">
+<div class="woohaen_header">
     <div style="margin: 2rem 0;">
         <h1>Blog</h1>
     </div>
