--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-<h1>hello world</h1>
+<div>
+    <form action="/account/hello_world/" method="post">
+        {% csrf_token %}
+        <input type="submit" class="btn btn-primary" value="POST">
+    </form>
+
+    <h1>
+        {{text}}
+    </h1>
 </div>
 {% endblock %}
