POST, GET, MODEL

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,14 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
+<div style="text-align: center;">
+    <h1>Hello World List</h1>
     <form action="/account/hello_world/" method="post">
         {% csrf_token %}
+        <div>
+            <input type="text" name="hello_world_input">
+        </div>
         <input type="submit" class="btn btn-primary" value="POST">
     </form>
 
+    {% if hello_world_output %}
     <h1>
-        {{text}}
+        {{hello_world_output.text}}
     </h1>
+    {% endif %}
 </div>
 {% endblock %}
