--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
-<div style="text-align: center;">
+<div style="text-align: center; max-width: 500px; margin: 4rem auto;">
     <form action="{% url 'accountapp:create' %}" method="post">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" class="btn btn-primary">
+        {% bootstrap_form form %}
+        <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3" value="확인">
     </form>
 </div>
 
