--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,5 +8,13 @@
     <h2>
         {{ target_user.username }}
     </h2>
+
+    {% if target_user == user %}
+    <a href="{% url 'accountapp:update' pk=user.pk %}">
+        <p>
+            Change Info
+        </p>
+    </a>
+    {% endif %}
 </div>
 {% endblock %}
