--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,10 @@
     <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
         <span>login</span>
     </a>
+
+    <a href="{% url 'accountapp:create' %}">
+        <span>Sign up</span>
+    </a>
     {% else %}
     <a href="{% url 'accountapp:detail' pk=user.pk %}">
         <span>MyPage</span>
