--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -15,6 +15,12 @@
             Change Info
         </p>
     </a>
+
+    <a href="{% url 'accountapp:delete' pk=user.pk %}">
+        <p>
+            탈퇴
+        </p>
+    </a>
     {% endif %}
 </div>
 {% endblock %}
