--- a/accountapp/templates/accountapp/delete.html
+++ b/accountapp/templates/accountapp/delete.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div style="text-align: center; max-width: 500px; margin: 4rem auto;">
-    <form action="{% url 'accountapp:delete' pk=user.pk %}" method="post">
+    <form action="{% url 'accountapp:delete' pk=target_user.pk %}" method="post">
         <div class="mb-4">
             <h4>탈퇴</h4>
         </div>
